--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dist": "npm run clean && npm run compile && npm run fetch && npm run doBuild -- --mode=dist",
     "distDev": "npm run clean && npm run compile && npm run fetch && npm run doBuild -- --mode=dev",
     "test": "npm run test:lint",
-    "test:lint": "eslint --cache --color --ext .jsx,.js ."
+    "test:lint": "eslint --cache --color --ext .jsx,.js .",
+    "install-electron": "set ELECTRON_GET_USE_PROXY=true && set GLOBAL_AGENT_HTTPS_PROXY=%HTTPS_PROXY% && npm install electron"
   },
   "repository": {
     "type": "git",
@@ -39,7 +40,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-react-intl": "^7.5.7",
     "copy-webpack-plugin": "^5.1.1",
-    "electron": "^8.2.5",
+    "electron": "^8.5.2",
     "electron-builder": "^22.6.0",
     "electron-devtools-installer": "^3.0.0",
     "electron-notarize": "^0.3.0",
